# rustRoast

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  README.md  STARTUP_INSTRUCTIONS.md  docker-compose.yml  start-server.sh
.github/workflows/: ci.yml  docker-publish-main.yml  docker-publish.yml  test.yml
apps/dashboard/: .gitignore  Dockerfile  README.md  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
apps/dashboard/docker/: nginx.conf
apps/dashboard/public/: manifest.webmanifest  sw.js
crates/core/: Cargo.toml
crates/mqtt/: Cargo.toml
crates/mqtt/src/: client.rs  config.rs  lib.rs
crates/server/: Cargo.toml
crates/server/migrations/: 001_roast_sessions.sql  002_roast_events.sql  003_device_configuration.sql  004_session_statistics.sql  005_auc_value.sql  006_cupping_scores.sql  007_profile_env_temp.sql
crates/server/src/: device_poller.rs  main.rs  modbus.rs  models.rs  services.rs  telemetry.rs
crates/server/src/routes/: devices.rs  mod.rs
crates/server/src/static/: docs.html  openapi.json
crates/ws-smoke/: Cargo.toml
docker/nginx/: nginx.conf
docs/: hardware-integration-guide.md
ralph/: .last-branch  CLAUDE.md  prd-artisan-parity.json  prd.json  progress.txt  ralph.sh
ralph/archive/: prd-profile-autotune.json  progress-profile-autotune.txt
tasks/: prd-profile-autotune.json  prd-profile-autotune.md  prd-rustroast-rewrite.md
tools/mock-device/: Dockerfile  mock_modbus_device.py  mock_roaster.py  mock_websocket_device.py  requirements.txt
(+136 files in other folders)
