[package]
name = "rustroast-mqtt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
rumqttc = "0.24"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
hostname = "0.3"

rustroast-core = { path = "../core" }

