[package]
name = "rustroast-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
rumqttc = "0.24"
prometheus = "0.13"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "sqlite", "chrono"] }
tower-http = { version = "0.6", features = ["fs"] }

rustroast-mqtt = { path = "../mqtt" }
rustroast-core = { path = "../core" }
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"] }
anyhow = "1.0.99"
